Etapa2/parser.output
Terminals unused in grammar

   TK_PR_THEN
   TK_PR_DO
   TK_PR_FOREACH
   TK_PR_SWITCH
   TK_PR_CASE
   TK_PR_CLASS
   TK_PR_PRIVATE
   TK_PR_PUBLIC
   TK_PR_PROTECTED
   TK_PR_END
   TK_PR_DEFAULT
   TK_OC_GE
   TK_OC_EQ
   TK_OC_NE
   TK_OC_AND
   TK_OC_OR
   TK_OC_FORWARD_PIPE
   TK_OC_BASH_PIPE
   TK_LIT_FALSE
   TK_LIT_TRUE
   TOKEN_ERRO


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | grammars program

    3 grammars: global_var_declaration
    4         | function_declaration

    5 global_var_declaration: TK_PR_STATIC decl ';'
    6                       | decl ';'

    7 decl: primitive_type identifier

    8 primitive_type: TK_PR_INT
    9               | TK_PR_FLOAT
   10               | TK_PR_CHAR
   11               | TK_PR_BOOL
   12               | TK_PR_STRING

   13 identifier: TK_IDENTIFICADOR
   14           | TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block
   16                     | primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

   17 function_parameters_list: %empty
   18                         | function_parameters_argument
   19                         | function_parameters_argument ',' function_parameters_list

   20 function_parameters_argument: TK_PR_CONST primitive_type TK_IDENTIFICADOR
   21                             | primitive_type TK_IDENTIFICADOR

   22 command_block: '{' command_block '}'
   23              | '{' '}'
   24              | command ';'

   25 command: if_statement
   26        | local_var_declaration
   27        | shift_command
   28        | assignment_command
   29        | input_command
   30        | output_command
   31        | function_call
   32        | command_return
   33        | TK_PR_BREAK
   34        | TK_PR_CONTINUE
   35        | loop_while
   36        | loop_for

   37 local_var_declaration: TK_PR_STATIC TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   38                      | TK_PR_STATIC primitive_type TK_IDENTIFICADOR local_var_initialization
   39                      | TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   40                      | primitive_type TK_IDENTIFICADOR local_var_initialization
   41                      | primitive_type TK_IDENTIFICADOR

   42 assignment_command: identifier '=' expression

   43 input_command: TK_PR_INPUT expression

   44 output_command: TK_PR_OUTPUT expression expression_list

   45 function_call: TK_IDENTIFICADOR '(' call_parameter_list ')'

   46 call_parameter_list: expression ',' call_parameter_list
   47                    | expression

   48 shift: TK_OC_SL
   49      | TK_OC_SR

   50 shift_command: identifier shift expression

   51 command_return: TK_PR_RETURN expression

   52 if_statement: TK_PR_IF '(' expression ')' command_block
   53             | TK_PR_IF '(' expression ')' command_block TK_PR_ELSE command_block

   54 command_block_loop: '{' command_block_loop '}'
   55                   | '{' '}'
   56                   | command

   57 loop_while: TK_PR_WHILE '(' expression ')' command_block_loop

   58 loop_for: TK_PR_FOR '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

   59 loop_for_command_list: loop_for_command ',' loop_for_command_list
   60                      | loop_for_command

   61 loop_for_command: local_var_declaration
   62                 | shift_command
   63                 | assignment_command

   64 expression_list: ',' expression
   65                | %empty

   66 expression: TK_IDENTIFICADOR
   67           | TK_LIT_INT
   68           | TK_LIT_FLOAT
   69           | '(' expression ')'
   70           | '+' expression
   71           | '-' expression
   72           | '!' expression
   73           | '&' expression
   74           | '*' expression
   75           | '?' expression
   76           | '#' expression
   77           | expression '+' expression
   78           | expression '-' expression
   79           | expression '*' expression
   80           | expression '/' expression
   81           | expression '%' expression
   82           | expression '|' expression
   83           | expression '&' expression
   84           | expression '^' expression
   85           | expression '?' expression ':' expression

   86 local_var_initialization: TK_OC_LE TK_IDENTIFICADOR
   87                         | TK_OC_LE TK_LIT_CHAR
   88                         | TK_OC_LE TK_LIT_STRING
   89                         | TK_OC_LE TK_LIT_FLOAT
   90                         | TK_OC_LE TK_LIT_INT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 72
'#' (35) 76
'%' (37) 81
'&' (38) 73 83
'(' (40) 15 16 45 52 53 57 58 69
')' (41) 15 16 45 52 53 57 58 69
'*' (42) 74 79
'+' (43) 70 77
',' (44) 19 46 59 64
'-' (45) 71 78
'/' (47) 80
':' (58) 58 85
';' (59) 5 6 24
'=' (61) 42
'?' (63) 75 85
'[' (91) 14
']' (93) 14
'^' (94) 84
'{' (123) 22 23 54 55
'|' (124) 82
'}' (125) 22 23 54 55
error (256)
TK_PR_INT (258) 8
TK_PR_FLOAT (259) 9
TK_PR_BOOL (260) 11
TK_PR_CHAR (261) 10
TK_PR_STRING (262) 12
TK_PR_IF (263) 52 53
TK_PR_THEN (264)
TK_PR_ELSE (265) 53
TK_PR_WHILE (266) 57
TK_PR_DO (267)
TK_PR_INPUT (268) 43
TK_PR_OUTPUT (269) 44
TK_PR_RETURN (270) 51
TK_PR_CONST (271) 20 37 39
TK_PR_STATIC (272) 5 15 37 38
TK_PR_FOREACH (273)
TK_PR_FOR (274) 58
TK_PR_SWITCH (275)
TK_PR_CASE (276)
TK_PR_BREAK (277) 33
TK_PR_CONTINUE (278) 34
TK_PR_CLASS (279)
TK_PR_PRIVATE (280)
TK_PR_PUBLIC (281)
TK_PR_PROTECTED (282)
TK_PR_END (283)
TK_PR_DEFAULT (284)
TK_OC_LE (285) 86 87 88 89 90
TK_OC_GE (286)
TK_OC_EQ (287)
TK_OC_NE (288)
TK_OC_AND (289)
TK_OC_OR (290)
TK_OC_SL (291) 48
TK_OC_SR (292) 49
TK_OC_FORWARD_PIPE (293)
TK_OC_BASH_PIPE (294)
TK_LIT_INT (295) 14 67 90
TK_LIT_FLOAT (296) 68 89
TK_LIT_FALSE (297)
TK_LIT_TRUE (298)
TK_LIT_CHAR (299) 87
TK_LIT_STRING (300) 88
TK_IDENTIFICADOR (301) 13 14 15 16 20 21 37 38 39 40 41 45 66 86
TOKEN_ERRO (302)


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
program (70)
    on left: 1 2, on right: 0 2
grammars (71)
    on left: 3 4, on right: 2
global_var_declaration (72)
    on left: 5 6, on right: 3
decl (73)
    on left: 7, on right: 5 6
primitive_type (74)
    on left: 8 9 10 11 12, on right: 7 15 16 20 21 37 38 39 40 41
identifier (75)
    on left: 13 14, on right: 7 42 50
function_declaration (76)
    on left: 15 16, on right: 4
function_parameters_list (77)
    on left: 17 18 19, on right: 15 16 19
function_parameters_argument (78)
    on left: 20 21, on right: 18 19
command_block (79)
    on left: 22 23 24, on right: 15 16 22 52 53
command (80)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36, on right: 24 56
local_var_declaration (81)
    on left: 37 38 39 40 41, on right: 26 61
assignment_command (82)
    on left: 42, on right: 28 63
input_command (83)
    on left: 43, on right: 29
output_command (84)
    on left: 44, on right: 30
function_call (85)
    on left: 45, on right: 31
call_parameter_list (86)
    on left: 46 47, on right: 45 46
shift (87)
    on left: 48 49, on right: 50
shift_command (88)
    on left: 50, on right: 27 62
command_return (89)
    on left: 51, on right: 32
if_statement (90)
    on left: 52 53, on right: 25
command_block_loop (91)
    on left: 54 55 56, on right: 54 57 58
loop_while (92)
    on left: 57, on right: 35
loop_for (93)
    on left: 58, on right: 36
loop_for_command_list (94)
    on left: 59 60, on right: 58 59
loop_for_command (95)
    on left: 61 62 63, on right: 59 60
expression_list (96)
    on left: 64 65, on right: 44
expression (97)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84 85, on right: 42 43 44 46 47 50 51 52 53 57 58 64 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 85
local_var_initialization (98)
    on left: 86 87 88 89 90, on right: 37 38 39 40


State 0

    0 $accept: . program $end
    1 program: . %empty  [$end]
    2        | . grammars program
    3 grammars: . global_var_declaration
    4         | . function_declaration
    5 global_var_declaration: . TK_PR_STATIC decl ';'
    6                       | . decl ';'
    7 decl: . primitive_type identifier
    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   15 function_declaration: . TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block
   16                     | . primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program                 go to state 7
    grammars                go to state 8
    global_var_declaration  go to state 9
    decl                    go to state 10
    primitive_type          go to state 11
    function_declaration    go to state 12


State 1

    8 primitive_type: TK_PR_INT .

    $default  reduce using rule 8 (primitive_type)


State 2

    9 primitive_type: TK_PR_FLOAT .

    $default  reduce using rule 9 (primitive_type)


State 3

   11 primitive_type: TK_PR_BOOL .

    $default  reduce using rule 11 (primitive_type)


State 4

   10 primitive_type: TK_PR_CHAR .

    $default  reduce using rule 10 (primitive_type)


State 5

   12 primitive_type: TK_PR_STRING .

    $default  reduce using rule 12 (primitive_type)


State 6

    5 global_var_declaration: TK_PR_STATIC . decl ';'
    7 decl: . primitive_type identifier
    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   15 function_declaration: TK_PR_STATIC . primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    decl            go to state 13
    primitive_type  go to state 14


State 7

    0 $accept: program . $end

    $end  shift, and go to state 15


State 8

    1 program: . %empty  [$end]
    2        | . grammars program
    2        | grammars . program
    3 grammars: . global_var_declaration
    4         | . function_declaration
    5 global_var_declaration: . TK_PR_STATIC decl ';'
    6                       | . decl ';'
    7 decl: . primitive_type identifier
    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   15 function_declaration: . TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block
   16                     | . primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 1 (program)

    program                 go to state 16
    grammars                go to state 8
    global_var_declaration  go to state 9
    decl                    go to state 10
    primitive_type          go to state 11
    function_declaration    go to state 12


State 9

    3 grammars: global_var_declaration .

    $default  reduce using rule 3 (grammars)


State 10

    6 global_var_declaration: decl . ';'

    ';'  shift, and go to state 17


State 11

    7 decl: primitive_type . identifier
   13 identifier: . TK_IDENTIFICADOR
   14           | . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   16 function_declaration: primitive_type . TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_IDENTIFICADOR  shift, and go to state 18

    identifier  go to state 19


State 12

    4 grammars: function_declaration .

    $default  reduce using rule 4 (grammars)


State 13

    5 global_var_declaration: TK_PR_STATIC decl . ';'

    ';'  shift, and go to state 20


State 14

    7 decl: primitive_type . identifier
   13 identifier: . TK_IDENTIFICADOR
   14           | . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15 function_declaration: TK_PR_STATIC primitive_type . TK_IDENTIFICADOR '(' function_parameters_list ')' command_block

    TK_IDENTIFICADOR  shift, and go to state 21

    identifier  go to state 19


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 program: grammars program .

    $default  reduce using rule 2 (program)


State 17

    6 global_var_declaration: decl ';' .

    $default  reduce using rule 6 (global_var_declaration)


State 18

   13 identifier: TK_IDENTIFICADOR .  [';']
   14           | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   16 function_declaration: primitive_type TK_IDENTIFICADOR . '(' function_parameters_list ')' command_block

    '['  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 13 (identifier)


State 19

    7 decl: primitive_type identifier .

    $default  reduce using rule 7 (decl)


State 20

    5 global_var_declaration: TK_PR_STATIC decl ';' .

    $default  reduce using rule 5 (global_var_declaration)


State 21

   13 identifier: TK_IDENTIFICADOR .  [';']
   14           | TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR . '(' function_parameters_list ')' command_block

    '['  shift, and go to state 22
    '('  shift, and go to state 24

    $default  reduce using rule 13 (identifier)


State 22

   14 identifier: TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 25


State 23

    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' . function_parameters_list ')' command_block
   17 function_parameters_list: . %empty  [')']
   18                         | . function_parameters_argument
   19                         | . function_parameters_argument ',' function_parameters_list
   20 function_parameters_argument: . TK_PR_CONST primitive_type TK_IDENTIFICADOR
   21                             | . primitive_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 26

    $default  reduce using rule 17 (function_parameters_list)

    primitive_type                go to state 27
    function_parameters_list      go to state 28
    function_parameters_argument  go to state 29


State 24

    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' . function_parameters_list ')' command_block
   17 function_parameters_list: . %empty  [')']
   18                         | . function_parameters_argument
   19                         | . function_parameters_argument ',' function_parameters_list
   20 function_parameters_argument: . TK_PR_CONST primitive_type TK_IDENTIFICADOR
   21                             | . primitive_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 26

    $default  reduce using rule 17 (function_parameters_list)

    primitive_type                go to state 27
    function_parameters_list      go to state 30
    function_parameters_argument  go to state 29


State 25

   14 identifier: TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 31


State 26

    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   20 function_parameters_argument: TK_PR_CONST . primitive_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 32


State 27

   21 function_parameters_argument: primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 33


State 28

   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' function_parameters_list . ')' command_block

    ')'  shift, and go to state 34


State 29

   18 function_parameters_list: function_parameters_argument .  [')']
   19                         | function_parameters_argument . ',' function_parameters_list

    ','  shift, and go to state 35

    $default  reduce using rule 18 (function_parameters_list)


State 30

   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list . ')' command_block

    ')'  shift, and go to state 36


State 31

   14 identifier: TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    $default  reduce using rule 14 (identifier)


State 32

   20 function_parameters_argument: TK_PR_CONST primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 37


State 33

   21 function_parameters_argument: primitive_type TK_IDENTIFICADOR .

    $default  reduce using rule 21 (function_parameters_argument)


State 34

    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   13 identifier: . TK_IDENTIFICADOR
   14           | . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   16 function_declaration: primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' . command_block
   22 command_block: . '{' command_block '}'
   23              | . '{' '}'
   24              | . command ';'
   25 command: . if_statement
   26        | . local_var_declaration
   27        | . shift_command
   28        | . assignment_command
   29        | . input_command
   30        | . output_command
   31        | . function_call
   32        | . command_return
   33        | . TK_PR_BREAK
   34        | . TK_PR_CONTINUE
   35        | . loop_while
   36        | . loop_for
   37 local_var_declaration: . TK_PR_STATIC TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   38                      | . TK_PR_STATIC primitive_type TK_IDENTIFICADOR local_var_initialization
   39                      | . TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   40                      | . primitive_type TK_IDENTIFICADOR local_var_initialization
   41                      | . primitive_type TK_IDENTIFICADOR
   42 assignment_command: . identifier '=' expression
   43 input_command: . TK_PR_INPUT expression
   44 output_command: . TK_PR_OUTPUT expression expression_list
   45 function_call: . TK_IDENTIFICADOR '(' call_parameter_list ')'
   50 shift_command: . identifier shift expression
   51 command_return: . TK_PR_RETURN expression
   52 if_statement: . TK_PR_IF '(' expression ')' command_block
   53             | . TK_PR_IF '(' expression ')' command_block TK_PR_ELSE command_block
   57 loop_while: . TK_PR_WHILE '(' expression ')' command_block_loop
   58 loop_for: . TK_PR_FOR '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 38
    TK_PR_WHILE       shift, and go to state 39
    TK_PR_INPUT       shift, and go to state 40
    TK_PR_OUTPUT      shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_PR_CONST       shift, and go to state 43
    TK_PR_STATIC      shift, and go to state 44
    TK_PR_FOR         shift, and go to state 45
    TK_PR_BREAK       shift, and go to state 46
    TK_PR_CONTINUE    shift, and go to state 47
    TK_IDENTIFICADOR  shift, and go to state 48
    '{'               shift, and go to state 49

    primitive_type         go to state 50
    identifier             go to state 51
    command_block          go to state 52
    command                go to state 53
    local_var_declaration  go to state 54
    assignment_command     go to state 55
    input_command          go to state 56
    output_command         go to state 57
    function_call          go to state 58
    shift_command          go to state 59
    command_return         go to state 60
    if_statement           go to state 61
    loop_while             go to state 62
    loop_for               go to state 63


State 35

    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   17 function_parameters_list: . %empty  [')']
   18                         | . function_parameters_argument
   19                         | . function_parameters_argument ',' function_parameters_list
   19                         | function_parameters_argument ',' . function_parameters_list
   20 function_parameters_argument: . TK_PR_CONST primitive_type TK_IDENTIFICADOR
   21                             | . primitive_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 26

    $default  reduce using rule 17 (function_parameters_list)

    primitive_type                go to state 27
    function_parameters_list      go to state 64
    function_parameters_argument  go to state 29


State 36

    8 primitive_type: . TK_PR_INT
    9               | . TK_PR_FLOAT
   10               | . TK_PR_CHAR
   11               | . TK_PR_BOOL
   12               | . TK_PR_STRING
   13 identifier: . TK_IDENTIFICADOR
   14           | . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   15 function_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR '(' function_parameters_list ')' . command_block
   22 command_block: . '{' command_block '}'
   23              | . '{' '}'
   24              | . command ';'
   25 command: . if_statement
   26        | . local_var_declaration
   27        | . shift_command
   28        | . assignment_command
   29        | . input_command
   30        | . output_command
   31        | . function_call
   32        | . command_return
   33        | . TK_PR_BREAK
   34        | . TK_PR_CONTINUE
   35        | . loop_while
   36        | . loop_for
   37 local_var_declaration: . TK_PR_STATIC TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   38                      | . TK_PR_STATIC primitive_type TK_IDENTIFICADOR local_var_initialization
   39                      | . TK_PR_CONST primitive_type TK_IDENTIFICADOR local_var_initialization
   40                      | . primitive_type TK_IDENTIFICADOR local_var_initialization
   41                      | . primitive_type TK_IDENTIFICADOR
   42 assignment_command: . identifier '=' expression
   43 input_command: . TK_PR_INPUT expression
   44 output_command: . TK_PR_OUTPUT expression expression_list
   45 function_call: . TK_IDENTIFICADOR '(' call_parameter_list ')'
   50 shift_command: . identifier shift expression
   51 command_return: . TK_PR_RETURN expression
   52 if_statement: . TK_PR_IF '(' expression ')' command_block
   53             | . TK_PR_IF '(' expression ')' command_block TK_PR_ELSE command_block
   57 loop_while: . TK_PR_WHILE '(' expression ')' command_block_loop
   58 loop_for: . TK_PR_FOR '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 38
    TK_PR_WHILE       shift, and go to state 39
    TK_PR_INPUT       shift, and go to state 40
    TK_PR_OUTPUT      shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_PR_CONST       shift, and go to state 43
    TK_PR_STATIC      shift, and go to state 44
    TK_PR_FOR         shift, and go to state 45
    TK_PR_BREAK       shift, and go to state 46
    TK_PR_CONTINUE    shift, and go to state 47
    TK_IDENTIFICADOR  shift, and go to state 48
    '{'               shift, and go to state 49

    primitive_type         go to state 50
    identifier             go to state 51
    command_block          go to state 65
    command                go to state 53
    local_var_declaration  go to state 54
    assignment_command     go to state 55
    input_command          go to state 56
    output_command         go to state 57
    function_call          go to state 58
    shift_command          go to state 59
    command_return         go to state 60
    if_statement           go to state 61
    loop_while             go to state 62
    loop_for               go to state 63


State 37

   20 function_parameters_argument: TK_PR_CONST primitive_type TK_IDENTIFICADOR .

    $default  reduce using rule 20 (function_parameters_argument)


State 38

   52 if_statement: TK_PR_IF . '(' expression ')' command_block
   53             | TK_PR_IF . '(' expression ')' command_block TK_PR_ELSE command_block

    '('  shift, and go to state 66


State 39

   57 loop_while: TK_PR_WHILE . '(' expression ')' command_block_loop

    '('  shift, and go to state 67


State 40

   43 input_command: TK_PR_INPUT . expression
   66 expression: . TK_IDENTIFICADOR
   67           | . TK_LIT_INT
   68           | . TK_LIT_FLOAT
   69           | . '(' expression ')'
   70           | . '+' expression
   71           | . '-' expression
   72           | . '!' expression
   73           | . '&' expression
   74           | . '*' expression
   75           | . '?' expression
   76           | . '#' expression
   77           | . expression '+' expression
   78           | . expression '-' expression
   79           | . expression '*' expression
   80           | . expression '/' expression
   81           | . expression '%' expression
   82           | . expression '|' expression
   83           | . expression '&' expression
   84           | . expression '^' expression
   85           | . expression '?' expression ':' expression

    TK_LIT_INT        shift, and go to state 68
    TK_LIT_FLOAT      shift, and go to state 69
    TK_IDENTIFICADOR  shift, and go to state 70
    '!'               shift, and go to state 71
    '#'               shift, and go to state 72
    '*'               shift, and go to state 73
    '+'               shift, and go to state 74
    '-'               shift, and go to state 75
    '&'               shift, and go to state 76
    '?'               shift, and go to state 77
    '('               shift, and go to state 78

    expression  go to state 79


State 41
